k8s/contacts-service.yml
apiVersion: v1
kind: Service
metadata:
  name: contacts-service
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: contacts-service
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8082
    nodePort: 30082
