k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
