k8s/node-exporter-service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: node-exporter
  ports:
  - protocol: TCP
    port: 9100
    targetPort: 9100
    nodePort: 30910
