k8s/pgadmin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: pgadmin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30050
