k8s/postgres-exporter-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: postgres-exporter
  ports:
  - protocol: TCP
    port: 9187
    targetPort: 9187
    nodePort: 30087
