k8s/rabbitmq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
  - name: amqp
    protocol: TCP
    port: 5672
    targetPort: 5672
    nodePort: 30072
  - name: management
    protocol: TCP
    port: 15672
    targetPort: 15672
    nodePort: 30172
