k8s/regions-service.yml
apiVersion: v1
kind: Service
metadata:
  name: regions-service
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: regions-service
  ports:
  - protocol: TCP
    port: 8083
    targetPort: 8083
    nodePort: 30083
