k8s/zabbix-agent-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-agent
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: zabbix-agent
  ports:
  - protocol: TCP
    port: 10050
    targetPort: 10050
