k8s/zabbix-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-db
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: zabbix-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
