k8s/zabbix-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: zabbix-server
  ports:
  - protocol: TCP
    port: 10051
    targetPort: 10051
