k8s/zabbix-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: zabbix-web
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30080
